// ============================================================
// Schema v2 — SaaS with Orgs + Flexible Schema
// ============================================================
//
// Key changes from v1:
//   - Better Auth organization plugin adds: organizations, members, invitations
//   - New tables: org_schemas, schema_versions, org_usage
//   - expense_report_jobs_table: +org_id, +schema_version_id
//   - extracted_expenses_table: removed typed field columns (merchant,
//     description, category, transport_details), replaced with
//     extracted_fields JSONB + schema_version_id. amount + date
//     retained as typed columns (universal, needed for aggregation).
//   - category enum: REMOVED (categories are now part of schema config)
//
// System fields: `amount` and `date` are always present on every
// extracted expense as typed columns. They are implicit in every
// schema version and cannot be removed by org admins.
//
// Custom fields: everything else lives in extracted_fields JSONB,
// keyed by SchemaFieldDefinition.key. The schema_version_id on the
// extracted expense row tells you how to interpret those keys.
// ============================================================

// ────────────────────────────────────────────
// Enums
// ────────────────────────────────────────────

Enum "app_user_status" {
  "pending"
  "active"
  "suspended"
}

Enum "app_user_role" {
  "owner"
  "admin"
  "member"
}

Enum "receipt_status" {
  "pending"
  "ocr_processing"
  "ocr_complete"
  "extracting"
  "complete"
  "failed"
}

Enum "org_member_role" {
  "owner"
  "admin"
  "member"
}

Enum "invitation_status" {
  "pending"
  "accepted"
  "cancelled"
  "expired"
}

// schema field type determines both the form input rendered in the
// review UI and the JSON schema type sent to OpenAI for structured output.
Enum "schema_field_type" {
  "text"
  "number"
  "date"
  "boolean"
  "enum"         // single-select from options list
  "multi_select" // multi-select from options list
}

// ────────────────────────────────────────────
// Auth tables (managed by Better Auth)
// ────────────────────────────────────────────

Table "users" {
  "id" uuid [pk, default: `gen_random_uuid()`]
  "name" text [not null]
  "email" text [unique, not null]
  "email_verified" boolean [not null, default: false]
  "image" text
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null]
  "role" text                        // Better Auth admin plugin: global role
  "banned" boolean [default: false]
  "ban_reason" text
  "ban_expires" timestamp

  Indexes {
    email [unique, name: "users_email_unique"]
    id [unique, name: "users_pkey"]
  }
}

Table "accounts" {
  "id" uuid [pk, default: `gen_random_uuid()`]
  "account_id" text [not null]
  "provider_id" text [not null]
  "user_id" uuid [not null]
  "access_token" text
  "refresh_token" text
  "id_token" text
  "access_token_expires_at" timestamp
  "refresh_token_expires_at" timestamp
  "scope" text
  "password" text
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null]

  Indexes {
    id [unique, name: "accounts_pkey"]
    user_id [name: "accounts_userId_idx"]
  }
}

Table "sessions" {
  "id" uuid [pk, default: `gen_random_uuid()`]
  "expires_at" timestamp [not null]
  "token" text [unique, not null]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null]
  "ip_address" text
  "user_agent" text
  "user_id" uuid [not null]
  "impersonated_by" text
  "active_organization_id" uuid      // NEW: Better Auth org plugin - tracks which org is active in this session

  Indexes {
    id [unique, name: "sessions_pkey"]
    token [unique, name: "sessions_token_unique"]
    user_id [name: "sessions_userId_idx"]
  }
}

Table "verifications" {
  "id" uuid [pk, default: `gen_random_uuid()`]
  "identifier" text [not null]
  "value" text [not null]
  "expires_at" timestamp [not null]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null]

  Indexes {
    identifier [name: "verifications_identifier_idx"]
    id [unique, name: "verifications_pkey"]
  }
}

// ────────────────────────────────────────────
// Organization tables (Better Auth org plugin)
// ────────────────────────────────────────────

Table "organizations" {
  // NEW: generated by `better-auth/plugins/organization`
  // Every user gets a personal org auto-created on signup.
  // Personal orgs: slug = user_id, name = "{name}'s Workspace"
  "id" uuid [pk, default: `gen_random_uuid()`]
  "name" text [not null]
  "slug" text [unique, not null]    // URL-safe identifier; personal orgs use user_id as slug
  "logo" text
  "metadata" text                   // Better Auth stores serialized JSON here
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null]

  Indexes {
    id [unique, name: "organizations_pkey"]
    slug [unique, name: "organizations_slug_unique"]
  }
}

Table "members" {
  // NEW: org membership; a user can belong to multiple orgs (contractor use case)
  "id" uuid [pk, default: `gen_random_uuid()`]
  "organization_id" uuid [not null]
  "user_id" uuid [not null]
  "role" org_member_role [not null, default: "member"]  // owner | admin | member
  "created_at" timestamp [not null, default: `now()`]

  Indexes {
    id [unique, name: "members_pkey"]
    (organization_id, user_id) [unique, name: "members_org_user_unique"]
  }
}

Table "invitations" {
  // NEW: pending email invitations to join an org
  "id" uuid [pk, default: `gen_random_uuid()`]
  "organization_id" uuid [not null]
  "email" text [not null]
  "role" org_member_role [not null, default: "member"]
  "status" invitation_status [not null, default: "pending"]
  "expires_at" timestamp [not null]
  "inviter_id" uuid [not null]
  "token" text [unique, not null]   // signed invite token sent via email
  "created_at" timestamp [not null, default: `now()`]

  Indexes {
    id [unique, name: "invitations_pkey"]
    token [unique, name: "invitations_token_unique"]
  }
}

// ────────────────────────────────────────────
// Schema configuration tables (custom)
// ────────────────────────────────────────────

Table "org_schemas" {
  // NEW: an org can have multiple named schemas, but only one active at a time.
  // On org creation, a default schema is automatically seeded (active = true).
  "id" uuid [pk, default: `gen_random_uuid()`]
  "org_id" uuid [not null]
  "name" text [not null]            // e.g. "Standard Expense Report", "Sales Team Report"
  "description" text
  "is_active" boolean [not null, default: false]  // only one schema active per org at a time
  "active_version_id" uuid          // FK to schema_versions (set after first version created)
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null]
  "created_by" uuid [not null]

  Note: '''
  Constraint: only one row per org_id can have is_active = true.
  Enforced via partial unique index: UNIQUE (org_id) WHERE is_active = true.

  active_version_id is nullable during schema creation before the first
  version is saved, then becomes non-null.
  '''

  Indexes {
    id [unique, name: "org_schemas_pkey"]
    org_id [name: "org_schemas_org_id_idx"]
    (org_id) [unique, name: "org_schemas_one_active_per_org", note: "WHERE is_active = true"]
  }
}

Table "schema_versions" {
  // NEW: immutable snapshots of a schema's field configuration.
  // Every time an admin edits and publishes a schema, a new version is created.
  // Existing jobs always reference their creation-time version — never updated.
  //
  // `fields` JSONB shape (SchemaFieldDefinition[]):
  // [
  //   {
  //     "key":          "merchant",       // unique snake_case key, immutable after creation
  //     "label":        "Merchant",       // display label, editable
  //     "type":         "text",           // schema_field_type enum
  //     "required":     false,            // must have a value at submission
  //     "extractable":  true,             // AI should attempt to extract from receipt
  //     "options":      null,             // string[] for enum/multi_select, null otherwise
  //     "helpText":     null,             // optional hint shown in review UI
  //     "defaultValue": null,             // pre-filled value for non-extractable fields
  //     "displayOrder": 1                 // render order in UI and export columns
  //   },
  //   ...
  // ]
  //
  // System fields (amount, date) are NOT stored here — they are
  // always present as typed columns on extracted_expenses_table.
  "id" uuid [pk, default: `gen_random_uuid()`]
  "schema_id" uuid [not null]
  "version_number" integer [not null]   // monotonically increasing per schema_id
  "fields" jsonb [not null]             // SchemaFieldDefinition[] — see shape above
  "created_at" timestamp [not null, default: `now()`]
  "created_by" uuid [not null]

  Note: '''
  NEVER update a schema_version row after creation — it is an immutable snapshot.
  Edits always produce a new row with version_number + 1.

  Validation constraints (enforced in application layer):
    - Max 20 fields per version
    - Max 30 options per enum/multi_select field
    - Field key must match ^[a-z][a-z0-9_]{0,39}$ and be unique within the version
    - Keys "amount" and "date" are reserved (system fields)
  '''

  Indexes {
    id [unique, name: "schema_versions_pkey"]
    (schema_id, version_number) [unique, name: "schema_versions_schema_version_unique"]
    schema_id [name: "schema_versions_schema_id_idx"]
  }
}

// ────────────────────────────────────────────
// Expense report tables (modified from v1)
// ────────────────────────────────────────────

Table "expense_report_jobs_table" {
  "id" uuid [pk, default: `gen_random_uuid()`]
  "org_id" uuid [not null]           // NEW: every job belongs to an org
  "user_id" uuid [not null]          // the member who created this job
  "schema_version_id" uuid           // NEW: frozen at job creation time (nullable for legacy rows)
  "title" text [not null, default: 'Expense report']
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]

  Note: '''
  schema_version_id is set when the job is created by looking up the
  org's active schema version at that moment. It never changes after creation.
  Null only for jobs created before schema versioning was introduced (legacy rows).
  '''

  Indexes {
    id [unique, name: "expense_report_jobs_table_pkey"]
    org_id [name: "jobs_org_id_idx"]
    (org_id, user_id) [name: "jobs_org_user_idx"]
  }
}

Table "receipt_files_table" {
  // No structural changes from v1.
  // Org context is inherited through the job relationship.
  "id" uuid [pk, default: `gen_random_uuid()`]
  "job_id" uuid [not null]
  "s3_key" text [not null]
  "original_filename" text
  "status" receipt_status [not null, default: 'pending']
  "error_message" text
  "ocr_started_at" timestamp
  "ocr_completed_at" timestamp
  "extraction_started_at" timestamp
  "extraction_completed_at" timestamp
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]

  Indexes {
    id [unique, name: "receipt_files_table_pkey"]
    job_id [name: "receipt_files_job_id_idx"]
    status [name: "receipt_files_status_idx"]
  }
}

Table "ocr_results_table" {
  // No changes from v1.
  "id" uuid [pk, default: `gen_random_uuid()`]
  "receipt_id" uuid [not null]
  "extracted_text" jsonb [not null]  // SlimOcrResult: summaryFields + lineItems + rawText
  "provider" text
  "confidence" numeric(5,2)
  "created_at" timestamp [not null, default: `now()`]

  Indexes {
    id [unique, name: "ocr_results_table_pkey"]
    receipt_id [name: "ocr_results_receipt_id_idx"]
  }
}

Table "extracted_expenses_table" {
  // MODIFIED from v1:
  //   REMOVED: merchant, description, category (enum), transport_details
  //   ADDED:   extracted_fields (JSONB), schema_version_id
  //   RETAINED: amount, date as typed columns (system fields — always present,
  //             needed for DB-level aggregation, sorting, and date range filtering)
  "id" uuid [pk, default: `gen_random_uuid()`]
  "receipt_id" uuid [not null]
  "ocr_result_id" uuid
  "schema_version_id" uuid           // which schema version produced this extraction (nullable for legacy)

  // System fields — always present, typed for queryability
  "amount" numeric(10,2) [not null]
  "date" date                        // nullable: legacy rows may lack a typed date

  // Flexible fields — all org-specific fields keyed by SchemaFieldDefinition.key
  // e.g. { "merchant": "Shell", "category": "fuel", "project_code": null }
  // Null for legacy rows (pre-schema-versioning).
  "extracted_fields" jsonb

  // Metadata
  "raw_json" jsonb                   // full AI response before validation, for debugging
  "model_version" text [not null]
  "is_current" boolean [not null, default: true]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null, default: `now()`]

  Note: '''
  extracted_fields is keyed by field.key from the referenced schema_version.
  To interpret a row, JOIN to schema_versions via schema_version_id and
  use the fields array to know which keys exist and their types.

  Legacy rows (schema_version_id IS NULL) have extracted_fields populated
  during the v1→v2 data migration with the hardcoded field values that
  were previously in typed columns.

  Partial unique index `uniq_active_receipt` (WHERE is_current = true)
  enforces at most one active extraction per receipt.
  '''

  Indexes {
    id [unique, name: "extracted_expenses_table_pkey"]
    receipt_id [unique, name: "uniq_active_receipt", note: "WHERE is_current = true"]
    schema_version_id [name: "extracted_expenses_schema_version_idx"]
    date [name: "extracted_expenses_date_idx"]
  }
}

// ────────────────────────────────────────────
// Usage tracking (for free tier enforcement)
// ────────────────────────────────────────────

Table "org_usage" {
  // NEW: tracks receipts processed per org per calendar month.
  // Incremented on every successful extraction (phase 2 complete).
  // Used to enforce free tier limits before enqueueing new receipts.
  "id" uuid [pk, default: `gen_random_uuid()`]
  "org_id" uuid [not null]
  "period" text [not null]           // "YYYY-MM" — e.g. "2025-05"
  "receipts_processed" integer [not null, default: 0]
  "created_at" timestamp [not null, default: `now()`]
  "updated_at" timestamp [not null]

  Indexes {
    id [unique, name: "org_usage_pkey"]
    (org_id, period) [unique, name: "org_usage_org_period_unique"]
  }
}

// ────────────────────────────────────────────
// Relationships
// ────────────────────────────────────────────

// Auth
Ref "accounts_user_id_fk":               "users"."id"         < "accounts"."user_id"              [delete: cascade]
Ref "sessions_user_id_fk":               "users"."id"         < "sessions"."user_id"              [delete: cascade]

// Orgs
Ref "members_org_id_fk":                 "organizations"."id" < "members"."organization_id"        [delete: cascade]
Ref "members_user_id_fk":               "users"."id"         < "members"."user_id"               [delete: cascade]
Ref "invitations_org_id_fk":             "organizations"."id" < "invitations"."organization_id"    [delete: cascade]
Ref "invitations_inviter_id_fk":         "users"."id"         < "invitations"."inviter_id"         [delete: cascade]
Ref "sessions_active_org_fk":            "organizations"."id" < "sessions"."active_organization_id" [delete: set null]

// Schema config
Ref "org_schemas_org_id_fk":             "organizations"."id" < "org_schemas"."org_id"             [delete: cascade]
Ref "org_schemas_created_by_fk":         "users"."id"         < "org_schemas"."created_by"         [delete: restrict]
Ref "org_schemas_active_version_fk":     "schema_versions"."id" < "org_schemas"."active_version_id" [delete: set null]
Ref "schema_versions_schema_id_fk":      "org_schemas"."id"   < "schema_versions"."schema_id"      [delete: cascade]
Ref "schema_versions_created_by_fk":     "users"."id"         < "schema_versions"."created_by"     [delete: restrict]

// Jobs (updated)
Ref "jobs_org_id_fk":                    "organizations"."id" < "expense_report_jobs_table"."org_id"              [delete: cascade]
Ref "jobs_user_id_fk":                   "users"."id"         < "expense_report_jobs_table"."user_id"             [delete: cascade]
Ref "jobs_schema_version_id_fk":         "schema_versions"."id" < "expense_report_jobs_table"."schema_version_id" [delete: set null]

// Receipts (unchanged)
Ref "receipt_files_job_id_fk":           "expense_report_jobs_table"."id" < "receipt_files_table"."job_id"        [delete: cascade]

// OCR results (unchanged)
Ref "ocr_results_receipt_id_fk":         "receipt_files_table"."id" < "ocr_results_table"."receipt_id"            [delete: cascade]

// Extracted expenses (updated)
Ref "extracted_receipt_id_fk":           "receipt_files_table"."id"  < "extracted_expenses_table"."receipt_id"        [delete: cascade]
Ref "extracted_ocr_result_id_fk":        "ocr_results_table"."id"    < "extracted_expenses_table"."ocr_result_id"     [delete: set null]
Ref "extracted_schema_version_id_fk":    "schema_versions"."id"      < "extracted_expenses_table"."schema_version_id" [delete: set null]

// Usage tracking
Ref "org_usage_org_id_fk":              "organizations"."id" < "org_usage"."org_id"               [delete: cascade]
